Header and Your journey section completed.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,91 @@
     </head>
 
     <body>
-        
+
+        <!-- 
+                                                Header.
+            =============================================================================
+         -->
+        <header>
+
+            <span><i class="fa-solid fa-bars"></i></span>
+
+            <h3>Influencer products</h3>
+
+            <!-- Navigation. -->
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">Sign up</a></li>
+                    <li><a href="#">Log in</a></li>
+                    <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
+                    <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+                </ul>                
+            </nav>
+
+            <span><i class="fa-solid fa-cart-shopping"></i></span>
+
+        </header>
+
+
+        <!-- 
+                                                Main.
+            =============================================================================
+         -->
+        <main>
+
+            <!-- 
+                                        Your journey section.
+                =============================================================
+             -->
+            <section id="your_journey">
+                <div>
+                    <div class="your_journey_left">
+                        <h3>Start your Journey as Influencer</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                        <button class="common_button">Preebook now <span class="common_button_span"><i class="fa-solid fa-arrow-right"></i></span></button>
+                    </div>
+                    <div class="your_journey_right">
+                        <img src="images/main-camera.png" alt="">
+                    </div>
+                </div>
+            </section>
+
+
+            <!-- 
+                                        link section.
+                =============================================================
+             -->
+            <section id="link_section">
+                <ul>
+                    <li><a href="#"><img src="" alt=""></a></li>
+                    <li><a href="#"><img src="" alt=""></a></li>
+                    <li><a href="#"><img src="" alt=""></a></li>
+                    <li><a href="#"><img src="" alt=""></a></li>
+                    <li><a href="#"><img src="" alt=""></a></li>
+                    <li><a href="#"><img src="" alt=""></a></li>
+                    <li><a href="#"><img src="" alt=""></a></li>
+                </ul>
+            </section>
+
+        </main>
+
+
+        <!-- 
+                                                Footer.
+            =============================================================================
+         -->
+        <footer></footer>
+
+
+
+
+
+
+        <!-- Fontawesome kit. -->
+        <script src="https://kit.fontawesome.com/1bbb5634e6.js" crossorigin="anonymous"></script>
+
     </body>
 
 </html>
