Link section completed.

--- a/index.html
+++ b/index.html
@@ -73,15 +73,17 @@
                 =============================================================
              -->
             <section id="link_section">
+                <hr>
                 <ul>
-                    <li><a href="#"><img src="" alt=""></a></li>
-                    <li><a href="#"><img src="" alt=""></a></li>
-                    <li><a href="#"><img src="" alt=""></a></li>
-                    <li><a href="#"><img src="" alt=""></a></li>
-                    <li><a href="#"><img src="" alt=""></a></li>
-                    <li><a href="#"><img src="" alt=""></a></li>
-                    <li><a href="#"><img src="" alt=""></a></li>
+                    <li><a href="#"><img src="images/logos/Alibaba.svg" alt="Alibaba Photo." title="Alibaba images."></a></li>
+                    <li><a href="#"><img src="images/logos/Amazon.svg" alt="Amazon photo." title="Amazon image."></a></li>
+                    <li><a href="#"><img src="images/logos/Daraz.pk Logo.svg" alt="Daraz photo." title="Daraz image."></a></li>
+                    <li><a href="#"><img src="images/logos/Ebay.svg" alt="Ebay photo." title="Ebay image."></a></li>
+                    <li><a href="#"><img src="images/logos/Rakuten.svg" alt="Rakuten photo." title="Rakuten image."></a></li>
+                    <li><a href="#"><img src="images/logos/Walmart.svg" alt="Walmart photo." title="Walmart image."></a></li>
+                    <li><a href="#"><img src="images/logos/Target.svg" alt="Target photo." title="Target image."></a></li>
                 </ul>
+                <hr>
             </section>
 
         </main>
