Popular section completed.

--- a/index.html
+++ b/index.html
@@ -86,6 +86,201 @@
                 <hr>
             </section>
 
+
+
+            <!-- 
+                                        Popular section.
+                =============================================================
+             -->
+            <section id="popular_section">
+                <h3>Popular Collection</h3>
+
+                <div class="popular_grid">
+                    <div class="popular_grid_item">
+                        <img src="images/tripod.png" alt="">
+                        <figcaption>Flex Tripod</figcaption>
+                        <span class="price">$50.48</span>
+                        <div class="div_star">
+                            <ul>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/vector_half.svg" alt=""></li>
+                            </ul>
+                            <span>4.99</span>
+                        </div>
+                        <div class="div_span">
+                            <span>Wordwide shifting</span>
+                            <span>available</span>
+                            <span>Buyers protection possible!</span>
+                        </div>
+                    </div>
+                    <div class="popular_grid_item">
+                        <img src="images/mic.png" alt="">
+                        <figcaption>microphone</figcaption>
+                        <span class="price">$120.25</span>
+                        <div class="div_star">
+                            <ul>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/vector_half.svg" alt=""></li>
+                            </ul>
+                            <span>4.99</span>
+                        </div>
+                        <div class="div_span">
+                            <span>Wordwide shifting</span>
+                            <span>available</span>
+                            <span>Buyers protection possible!</span>
+                        </div>
+                    </div>
+                    <div class="popular_grid_item">
+                        <img src="images/airpod.png" alt="">
+                        <figcaption>Airbuds</figcaption>
+                        <span class="price">$100.00</span>
+                        <div class="div_star">
+                            <ul>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/vector_half.svg" alt=""></li>
+                            </ul>
+                            <span>4.99</span>
+                        </div>
+                        <div class="div_span">
+                            <span>Wordwide shifting</span>
+                            <span>available</span>
+                            <span>Buyers protection possible!</span>
+                        </div>
+                    </div>
+                    <div class="popular_grid_item">
+                        <img src="images/drone.png" alt="">
+                        <figcaption>Drone</figcaption>
+                        <span class="price">$980.25</span>
+                        <div class="div_star">
+                            <ul>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/vector_half.svg" alt=""></li>
+                            </ul>
+                            <span>4.99</span>
+                        </div>
+                        <div class="div_span">
+                            <span>Wordwide shifting</span>
+                            <span>available</span>
+                            <span>Buyers protection possible!</span>
+                        </div>
+                    </div>
+                    <div class="popular_grid_item">
+                        <img src="images/lights.png" alt="">
+                        <figcaption>Light Setup</figcaption>
+                        <span class="price">$1200.00</span>
+                        <div class="div_star">
+                            <ul>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/vector_half.svg" alt=""></li>
+                            </ul>
+                            <span>4.99</span>
+                        </div>
+                        <div class="div_span">
+                            <span>Wordwide shifting</span>
+                            <span>available</span>
+                            <span>Buyers protection possible!</span>
+                        </div>
+                    </div>
+                    <div class="popular_grid_item">
+                        <img src="images/setup.png" alt="">
+                        <figcaption>Photoshoot set</figcaption>
+                        <span class="price">$820.40</span>
+                        <div class="div_star">
+                            <ul>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/vector_half.svg" alt=""></li>
+                            </ul>
+                            <span>4.99</span>
+                        </div>
+                        <div class="div_span">
+                            <span>Wordwide shifting</span>
+                            <span>available</span>
+                            <span>Buyers protection possible!</span>
+                        </div>
+                    </div>
+                    <div class="popular_grid_item">
+                        <img src="images/camera.png" alt="">
+                        <figcaption>Vlogging Camera</figcaption>
+                        <span class="price">$1800.80</span>
+                        <div class="div_star">
+                            <ul>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/vector_half.svg" alt=""></li>
+                            </ul>
+                            <span>4.99</span>
+                        </div>
+                        <div class="div_span">
+                            <span>Wordwide shifting</span>
+                            <span>available</span>
+                            <span>Buyers protection possible!</span>
+                        </div>
+                    </div>
+                    <div class="popular_grid_item">
+                        <img src="images/gear.png" alt="">
+                        <figcaption>Green Screen</figcaption>
+                        <span class="price">$25.48</span>
+                        <div class="div_star">
+                            <ul>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/vector_half.svg" alt=""></li>
+                            </ul>
+                            <span>4.99</span>
+                        </div>
+                        <div class="div_span">
+                            <span>Wordwide shifting</span>
+                            <span>available</span>
+                            <span>Buyers protection possible!</span>
+                        </div>
+                    </div>
+                    <div class="popular_grid_item">
+                        <img src="images/action.png" alt="">
+                        <figcaption>Action Camera</figcaption>
+                        <span class="price">$380.00</span>
+                        <div class="div_star">
+                            <ul>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/Vector.svg" alt=""></li>
+                                <li><img src="images/vector_half.svg" alt=""></li>
+                            </ul>
+                            <div id="star_point">
+                                <span>4.99</span>
+                            </div>
+                        </div>
+                        <div class="div_span">
+                            <span>Wordwide shifting</span>
+                            <span>available</span>
+                            <span>Buyers protection possible!</span>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
         </main>
 
 
