Featured product section completed.

--- a/index.html
+++ b/index.html
@@ -279,6 +279,24 @@
                         </div>
                     </div>
                 </div>
+
+                <p>See More <span class="common_button_span"><i class="fa-solid fa-arrow-right"></i></span></p>
+            </section>
+
+
+            <!-- 
+                                        Featured product section.
+                =============================================================
+             -->
+            <section id="featured_product_section">
+                <div class="featured_product_flex">
+                    <img src="images/gear.png" alt="">
+                    <div class="featured_product_left">
+                        <h3>Featured products at one place</h3>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                        <button class="common_button">Join Now<span class="common_button_span"><i class="fa-solid fa-arrow-right"></i></span></button>
+                    </div>
+                </div>
             </section>
 
         </main>
