Influencer Gear completed.

--- a/index.html
+++ b/index.html
@@ -306,7 +306,16 @@
                                                 Footer.
             =============================================================================
          -->
-        <footer></footer>
+        <footer>
+            <h3>Influencer products</h3>
+            <span>Copyright © 2020  influencer products</span><span>All rights reserved</span>
+            <ul>
+                <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href=""><i class="fa-solid fa-globe"></i></a></li>
+                <li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
+                <li><a href=""><i class="fa-brands fa-youtube"></i></a></li>
+            </ul>
+        </footer>
 
 
 
